--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --column-primary-background: #f7f7f7;
+  --column-primary-dragged-background: #e9e8e8;
+  --column-secondary-background: #ebecf0;
+  --column-border-color: #d6d6d6;
+  --task-dragged-background: #f6f6f6;
+  --task-background: #ffffff;
+  --add-button-background: #3db43d;
+  --add-button-hover-background: #2f8d2f;
+  --main-border-radius: 5px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,6 +22,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.active-wrapper {
+  background-color: var(--column-secondary-background)!important;
 }
 
 .nav-link {
