--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   --main-border-radius: 5px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
