--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
   --main-light-color: #ffffff;
   --main-light-transparent-background: hsla(0, 0%, 100%, 0.24);
   --main-light-transparent-background-hover: hsla(0, 0%, 98%, 0.34);
+  --main-light-background: #1d76db;
+  --main-light-background-hover: #3d92f3;
+  --main-light-background-box-shadow: 0 5px 15px 0 rgba(12, 122, 248, 0.39);
+  --main-dark-color: #111111;
+  --main-dark-sub-color: #666666;
   --column-primary-background: #f7f7f7;
   --column-primary-dragged-background: #e9e8e8;
   --column-secondary-background: #ebecf0;
@@ -13,43 +18,22 @@
   --main-border-radius: 5px;
 }
 
+:root {
+  --main-font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--main-font-family)!important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#068adb!important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.nav-link {
-  color: white;
-  transition: all 0.3s;
-}
-
-.nav-link.active {
-  color: rgb(236, 236, 236);
-}
-
-.nav-link:hover {
-  color: rgb(236, 236, 236);
-  text-decoration: none;
-}
-
-.nav-link:focus {
-  outline: none;
-}
-
-.nav-link:active {
-  outline: none;
 }
